[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GUI/QuitToDesktopButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GUI/main_menu.gd" type="Script" id=2]
[ext_resource path="res://Resources/Themes/gui_theme_large.tres" type="Theme" id=3]
[ext_resource path="res://World.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/GUI/Options_Menu/OptionsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/GUI/Credits_Menu/CreditsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/permian_sans_typeface.otf" type="DynamicFontData" id=24]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 24 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
scene_to_load = ExtResource( 4 )
first_button_to_focus_node_path = NodePath("ButtonsContainer/PlayButton")

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.0
margin_top = 53.7401
margin_right = 82.0
margin_bottom = 91.7401
text = "Feltari"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -180.0
margin_right = 280.0
margin_bottom = 180.0
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="ButtonsContainer"]
margin_right = 560.0
margin_bottom = 45.0
focus_neighbour_left = NodePath("../QuitToDesktopButton")
focus_neighbour_top = NodePath("../QuitToDesktopButton")
focus_neighbour_right = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../QuitToDesktopButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "PLAY"
flat = true

[node name="OptionsButton" type="Button" parent="ButtonsContainer"]
margin_top = 105.0
margin_right = 560.0
margin_bottom = 150.0
focus_neighbour_left = NodePath("../PlayButton")
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_right = NodePath("../CreditsButton")
focus_neighbour_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../PlayButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OPTIONS"
flat = true

[node name="CreditsButton" type="Button" parent="ButtonsContainer"]
margin_top = 210.0
margin_right = 560.0
margin_bottom = 255.0
focus_neighbour_left = NodePath("../OptionsButton")
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../QuitToDesktopButton")
focus_next = NodePath(".")
focus_previous = NodePath("../OptionsButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CREDITS"
flat = true

[node name="QuitToDesktopButton" parent="ButtonsContainer" instance=ExtResource( 1 )]
margin_top = 315.0
margin_right = 560.0
margin_bottom = 360.0
focus_neighbour_left = NodePath("../CreditsButton")
focus_neighbour_top = NodePath("../CreditsButton")
focus_neighbour_right = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="VersionLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.5
margin_top = -82.0
margin_right = 79.5
margin_bottom = -44.0
custom_fonts/font = SubResource( 1 )
text = "Version: 1.0"
align = 1
valign = 1

[node name="OptionsMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CreditsMenu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="ButtonsContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="visibility_changed" from="OptionsMenu" to="." method="_on_OptionsMenu_visibility_changed"]
[connection signal="visibility_changed" from="CreditsMenu" to="." method="_on_CreditsMenu_visibility_changed"]
